--- a/movie-catalogue/.eslintrc.json
+++ b/movie-catalogue/.eslintrc.json
@@ -1,16 +1,20 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "node": true
-    },
-    "extends": [
-        "airbnb-base"
-    ],
-    "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "rules": {
-    }
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  "extends": ["airbnb-base"],
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-console": "off",
+    "no-empty-function": "off",
+    "no-underscore-dangle": "off",
+    "linebreak-style": "off",
+    "operator-linebreak": "off",
+    "no-self-import": "off"
+  }
 }
