--- a/movie-catalogue/package.json
+++ b/movie-catalogue/package.json
@@ -29,6 +29,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "idb": "^6.0.0",
     "regenerator-runtime": "^0.13.7",
     "serviceworker-webpack-plugin": "^1.0.1"
   }
