--- a/inshokuten-resto/package.json
+++ b/inshokuten-resto/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "idb": "^6.0.0",
     "regenerator-runtime": "^0.13.7",
-    "serviceworker-webpack-plugin": "^1.0.1"
+    "serviceworker-webpack-plugin": "^1.0.1",
+    "url-loader": "^4.1.1"
   }
 }
