--- a/inshokuten-resto/.eslintrc.json
+++ b/inshokuten-resto/.eslintrc.json
@@ -17,6 +17,8 @@
     "operator-linebreak": "off",
     "no-self-import": "off",
     "no-restricted-globals": "off",
-    "no-extra-semi": 0
+    "no-extra-semi": 0,
+    "comma-dangle": "off",
+    "indent": "off"
   }
 }
