--- a/inshokuten-resto/package.json
+++ b/inshokuten-resto/package.json
@@ -29,6 +29,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "eslint-config-prettier": "^8.3.0",
     "idb": "^6.0.0",
     "regenerator-runtime": "^0.13.7",
     "serviceworker-webpack-plugin": "^1.0.1",
