--- a/inshokuten-resto/.eslintrc.json
+++ b/inshokuten-resto/.eslintrc.json
@@ -13,12 +13,18 @@
     "no-console": "off",
     "no-empty-function": "off",
     "no-underscore-dangle": "off",
-    "linebreak-style": "off",
+
     "operator-linebreak": "off",
     "no-self-import": "off",
     "no-restricted-globals": "off",
+    "linebreak-style": 0,
+    "consistent-return": 0,
+    "no-prototype-builtins": 0,
     "no-extra-semi": 1,
     "comma-dangle": "off",
-    "indent": "off"
-  }
+    "indent": "off",
+
+    "import/prefer-default-export": 0
+  },
+  "plugins": ["jasmine"]
 }
